directus/directus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: directus-deployment
  namespace: directus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: directus
  template:
    metadata:
      labels:
        app: directus
    spec:
      containers:
        - name: directus
          image: directus/directus:v8-apache
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: directus-svc
  namespace: directus
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: directus
