directus/directus_db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: directus-db-deployment
  namespace: directus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: directus-db
  template:
    metadata:
      labels:
        app: directus-db
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: directus-volume
      volumes:
        - name: directus-volume
          persistentVolumeClaim:
            claimName: directus-volume
---
apiVersion: v1
kind: Service
metadata:
  name: directus-db-svc
  namespace: directus
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: directus-db
