directus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: directus-ui
  namespace: directus
  annotations:
    ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  rules:
    - host: directus.datahub.all
      http:
        paths:
          - path: /
            backend:
              serviceName: directus-svc
              servicePort: 80
